<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/selected_book_tv_margin_bottom"
            android:text="@string/selected_book_tv_label"
            android:textSize="@dimen/selected_book_label_font_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/linear_layout_lateral_margin"
            android:layout_marginRight="@dimen/linear_layout_lateral_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/label_margin_right"
                android:layout_marginRight="@dimen/label_margin_right"
                android:text="@string/title_label" />

            <TextView
                android:id="@+id/selected_book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="@dimen/selected_book_tv_min_height" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/linear_layout_lateral_margin"
            android:layout_marginRight="@dimen/linear_layout_lateral_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/label_margin_right"
                android:layout_marginRight="@dimen/label_margin_right"
                android:text="@string/author_label" />

            <TextView
                android:id="@+id/selected_book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="@dimen/selected_book_tv_min_height" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/linear_layout_lateral_margin"
            android:layout_marginRight="@dimen/linear_layout_lateral_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/label_margin_right"
                android:layout_marginRight="@dimen/label_margin_right"
                android:text="@string/description_label" />

            <TextView
                android:id="@+id/selected_book_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="@dimen/selected_book_tv_min_height"

                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>